--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Warhammer 40k Army List Parser</title>
-    <link rel="stylesheet" href="css/style.css"> <!-- Link to your CSS file -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -18,7 +18,6 @@
     <div id="output"></div>
 </div>
 
-<!-- Link to external JavaScript file -->
 <script src="js/script.js"></script>
 
 </body>
