--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     <button onclick="parseList()">Parse List</button>
     <pre id="output"></pre>
 
+    <footer>
+        <p>Version 1.0.0</p> <!-- Add version number here -->
+    </footer>
+
     
 </body>
 </html>
