--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-<script src="js/scripts.js"></script>
+
     <h1>Sarvoth's Warhammer 40k Tiny List Maker</h1>
     <p>
         This parser simplifies Warhammer 40k army lists and requires exports from the official Warhammer 40k app.
@@ -23,6 +23,6 @@
         <p>Version 1.0.0</p> <!-- Add version number here -->
     </footer>
 
-    
+    <script src="js/script.js"></script>
 </body>
 </html>
