--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
         <p>Version 1.0.0</p> <!-- Add version number here -->
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
