--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-
     <h1>Sarvoth's Warhammer 40k Tiny List Maker</h1>
     <p>
         This parser simplifies Warhammer 40k army lists and requires exports from the official Warhammer 40k app.
@@ -20,7 +19,7 @@
     <pre id="output"></pre>
 
     <footer>
-        <p>Version 1.0.0</p> <!-- Add version number here -->
+        <p>Version 1.0.1</p> <!-- Incremented version number -->
     </footer>
 
     <script src="js/scripts.js"></script>
